--- a/pipeline.yml
+++ b/pipeline.yml
@@ -15,7 +15,7 @@ resources:
 - name: damian_demo_build_image
   type: docker-image
   source:
-   repository: bguttmannavtq/anynines-blog-build-image
-   email: your@email.com
-   username: your_username
-   password: your_password
+   repository: eneasz/miniblog
+   email: ((docker_mail))
+   username: ((docker_user))
+   password: ((docker_pass))
